tests/snapshots/runtime_error_fixtures/base_flat_map_return_shape.snap
---
source: tests/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/base_flat_map_return_shape.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[1 of 7] Compiling  Assert
[2 of 7] Compiling  IO
[3 of 7] Compiling  List
[4 of 7] Compiling  Numeric
[5 of 7] Compiling  Option
[6 of 7] Compiling  String
• 1 error • examples/runtime_errors/base_flat_map_return_shape.flx
error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/runtime_errors/base_flat_map_return_shape.flx:2:19
  |
2 |     let ignored = flat_map(#[1], /x -> x)
  |                   ^^^^^^^^^^^^^^^^^^^^^^^
  |                   ----------------------- parameter 1 has type `Array<Int>`

  |                   ----------------------- this type mismatch is reported here

Note:
  expected parameter type: List<_>
  found parameter type: Array<Int>
  the conflicting types meet at this expression

Help:
  Change parameter 1 to use `List<_>` consistently.
